--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,15 @@
     "pg": "^8.13.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.14.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-standard": "^5.0.0",
+    "globals": "^15.13.0",
     "nodemon": "^3.1.7"
   }
 }
